Source/WebKit2/UIProcess/API/mac/WKViewInternal.h
@@ -101,4 +101,7 @@ namespace WebKit {
 - (NSInteger)spellCheckerDocumentTag;
 - (void)handleAcceptedAlternativeText:(NSString*)text;
 
+- (void)_setSuppressVisibilityUpdates:(BOOL)suppressVisibilityUpdates;
+- (BOOL)_suppressVisibilityUpdates;
+
 @end
